--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ title {
 }
 
 header{
-    background-image: url('bg.jpg');
+    background-image: url('bg2.jpg');
     height: 100vh;
     background-size: cover;
     background-position: center;
